feat(comet): Rewrite the annotation `@CometX` as a business activity log
[Wormhole] Directional reception of event types is now supported.
[Crust] Fix could not find token presence in L1 cache.
[Light] Fixed the return type of the cache failed to retrieve the method correctly.
[sirius] Fixed the cache key is not mapper class name.