@@ -363,6 +363,11 @@ public class LightCache implements Cache {
     }
 
     @Override
+    public boolean isCacheL1Exists(String key) {
+        return cacheMap.containsKey(key);
+    }
+
+    @Override
     public boolean isCacheL2Exists(String key) {
         return Objects.requireNonNull(stringRedisTemplate.hasKey(key));
     }
@@ -399,7 +404,7 @@ public class LightCache implements Cache {
                     return;
                 }
                 try {
-                    discardStrategy = strategyClass.newInstance();
+                    discardStrategy = strategyClass.getDeclaredConstructor().newInstance();
                 } catch (Exception e) {
                     discardStrategy  = new HotDiscard();
                     log.error("light create strategy class error with message:{}", e.getMessage(), e);
